In process of implementing array list item map markers.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            android.defaultConfig.vectorDrawables.useSupportLibrary = true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
