--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,12 @@
         </activity>
 
         <activity
-            android:name=".MapsActivity"
-            android:label="activity_maps">
+            android:name=".BrewsFragment"
+            android:label="Brews"
             android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
 
     </application>
